# LFR_Flight_Software

./: .clang-format  .gitignore  ASM_calibration_default-full-tables_FSW_R3.3_AC_DIFF_G5_or_DC_DIFF_G1_R=0-0-0_kappa=1e-04_2021-09-08.json  CMakeLists.txt  RAM Budget.ods  README.md  meson.build  meson_options.txt  parameter ranges.ods  parameters new waveform picker.ods  sonar-project.properties  sparc-cross.ini
EQM/: eqm.pro  sparc.pri
EQM/header/: grspw.h
EQM/src/: grspw.c  main.c
FSW-qt/: Leon3_sparc_sim.ld  Leon3_startup_sim.S  fsw-qt.pro  sparc.pri
LFR_basic-parameters/: basic_parameters.c  basic_parameters.h  basic_parameters_params.h  basic_parameters_utilities.h  custom_floats.h  file_utilities.c  file_utilities.h  main.c  meson.build  sm_test1.txt  sm_test2_R3.txt  tab_test2_R3_v2.3  tab_test2_R3_v2.3_Bruno_20181009_avec_extern_2.5 final  tests1.pro  tests4.pro  tests5.pro
TimeGenerator-qt/: sparc.pri  timegen.pro
TimeGenerator-qt/header/: timegen_init.h  timegen_misc.h  timegen_spacewire.h  timegen_tc_handler.h
TimeGenerator-qt/src/: timegen_init.c  timegen_misc.c  timegen_spacewire.c  timegen_tc_handler.c
doc/: Doxyfile  FSW.docx  LFR VHDL.docx  timekeeping.docx
docs/: star dundee little user s guide.odt
header/: FSW-config.h  FSW-rtems-processing.h  GscMemoryLPP.hpp  LPP_grspw.h  LPP_spwAPI.h  TC_handler.h  TC_types.h  WF_handler.h  basic_parameters.h  ccsds_types.h  fsw_compile_warnings.h  fsw_debug.h  fsw_globals.h  fsw_housekeeping.h  fsw_init.h  fsw_misc.h  fsw_params.h  fsw_params_nb_bytes.h  fsw_params_processing.h  fsw_params_wf_handler.h  fsw_processing.h  fsw_spacewire.h  fsw_spool.h  fsw_watchdog.h  grlib_regs.h  grlibregs.h  lfr_cpu_usage_report.h  tc_acceptance.h  tc_handler.h  tc_load_dump_parameters.h  tm_byte_positions.h  tm_lfr_tc_exe.h  wf_handler.h
header/hw/: lfr_regs.h  timer.h  uart.h  wf_handler.h
header/lfr_common_headers/: TC_types.h  ccsds_types.h  fsw_params.h  fsw_params_nb_bytes.h  fsw_params_processing.h  tm_byte_positions.h
header/mitigations/: PAS_filtering.h  reaction_wheel_filtering.h
header/processing/: avf0_prc0.h  avf1_prc1.h  avf2_prc2.h  calibration_matrices.h  fsw_processing.h  iir_filter.h
header/tc_tm/: tc_acceptance.h  tc_handler.h  tc_load_dump_parameters.h  tm_lfr_tc_exe.h
hello/: main.c
libgcov/: CMakeLists.txt  build_gcov_files.py  gcov-io.c  gcov-io.h  gcov-iov.h  gcovr.py  gen_html.py  lcovrc  libgcov.c  meson.build  record_lfr_console.py
python_scripts/: 00_LFRControlPlugin_reload_fsw.py  CalibrationMatricesInit_codeGen.ipynb  EQM_reload_sw.py  EQM_setup.py  EQM_setup_and_sw.py  LFRControlPlugin.py  LFRControlPlugin_reload_all.py  LFRControlPlugin_reload_fsw 2-0-2-3.py  LFRControlPlugin_reload_fsw 3-0-0-10.py  LFRControlPlugin_reload_fsw.py  LFRControlPlugin_reload_timegen.py  LFRControlPlugin_setup.py  LFRControlPlugin_startAll.py  LFRControlPlugin_startFsw.py  LFR_Pot_Filter.ipynb  LOAD_FSW_AHBUART.py  LOAD_FSW_STAR_DUNDEE.py  Matrix_calibration_code_gen.ipynb  RELOAD_ALL_STAR_DUNDEE.py  RELOAD_FSW_STAR_DUNDEE.py  RELOAD_HELLO_WORLD_STAR_DUNDEE.py  RELOAD_TIMEGEN_STAR_DUNDEE.py  cally.sh  dsu3plugin0_reload_fsw.py  hg_to_git.py  script_gcovr  script_setVirtualEnvForGcovr  scrub.py
scripts/: gresb.bat  grmon-gresb.bat
sparc/: Findcppcheck.cpp  cppcheck.cmake  leon3ft-b2bst-scan.tcl  leon3ft-b2bst-scan_wrapper  sparc-rtems.cmake
src/: CMakeLists.txt  FSW-config.c  FSW-rtems-processing.c  FSW-rtems.c  FSW.c  LPP_grspw.c  LPP_spwAPI.c  TC_Handler_TEST.c  TC_handler.c  basic_parameters.c  fsw_config.c  fsw_globals.c  fsw_housekeeping.c  fsw_init.c  fsw_misc.c  fsw_processing.c  fsw_processing_globals.c  fsw_spacewire.c  fsw_spool.c  fsw_watchdog.c  lfr_cpu_usage_report.c  meson.build  rtems-spwtest-2boards.c  tc_acceptance.c  tc_handler.c  tc_load_dump_parameters.c  tm_lfr_tc_exe.c  wf_handler.c
src/avf_prc/: avf0_prc0.c  avf0_prc0.h  avf1_prc1.c  avf1_prc1.h  avf2_prc2.c  avf2_prc2.h  fsw_processing.c  fsw_processing.h
src/basic_parameters/: basic_parameters.c  basic_parameters.h  file_utilities.c  file_utilities.h  main.c  sm_test2.txt  tests3.pro
src/hw/: timer.c  uart.c  wf_handler.c
src/mitigations/: PAS_filtering.c  reaction_wheel_filtering.c
src/processing/: avf0_prc0.c  avf1_prc1.c  avf2_prc2.c  calibration_matrices.c  fsw_processing.c
src/processing/ASM/: spectralmatrices.c
src/tc_tm/: tc_acceptance.c  tc_handler.c  tc_load_dump_parameters.c  tm_lfr_tc_exe.c
testbenches/fsw_matrices_handling/: fsw_matrices_handling.pro  functions.h  main.c
testbenches/optimization/: meson.build
testbenches/optimization/ASM/: README.md  asm_bench.py  main.c  meson.build
testbenches/optimization/BasicParameters1/: basic_parameters1_benchmark.py  main.c  meson.build
testbenches/optimization/Matrix_average/: main.c  meson.build
testbenches/optimization/Matrix_change_of_basis/: main.c  matrix_change_of_basis_benchmark.py  meson.build
testbenches/optimization/Memory_write/: README.md  main.c  memory_write_benchmark.py  meson.build
testbenches/optimization/common/: LFR_TB_utils.h
tests/: meson.build
tests/SM_calibration/: main.cpp  test.py
tests/basic_parameters/: main.cpp
tests/common/: FSW_helpers.hpp  mock_globals.c  mock_globals.h  py_wrappers.cpp
tests/common/rtems_mock/: rtems.h
tests/helpers/: main.cpp
tests/iir_filter/: main.cpp
tests/spectral_matrices/: main.cpp
timegen/: CMakeLists.txt  block diagram.odg
timegen-qt/: RPW-MEB-LFR-NTT-00125-1-0_GSE_System_clock_simulator.odt  timegen-qt.pro
timegen-qt/header/: fsw_init.h  fsw_params_nb_bytes.h  fsw_params_wf_handler.h  grlib_regs.h  tc_handler.h  tc_load_dump_parameters.h  wf_handler.h
timegen-qt/src/: fsw_init.c  fsw_spacewire.c  tc_handler.c  (+2 more)
timegen/header/: TC_types.h  fsw_misc.h  fsw_params.h  fsw_spacewire.h  lfr_cpu_usage_report.h  tm_lfr_tc_exe.h
timegen/header/processing/: avf1_prc1.h  avf2_prc2.h
timegen/src/: fsw_config.c  fsw_init.c  fsw_misc.c  fsw_processing_globals.c  fsw_spacewire.c  tc_acceptance.c  tc_handler.c
timegen/src/processing/: avf0_prc0.c  fsw_processing.c
(+2 files in other folders)
