option('SW_VERSION_N1', type : 'string', value : '3', description : 'N1 FSW Version.')
option('SW_VERSION_N2', type : 'string', value : '2', description : 'N2 FSW Version.')
option('SW_VERSION_N3', type : 'string', value : '0', description : 'N3 FSW Version.')
option('SW_VERSION_N4', type : 'string', value : '24', description : 'N4 FSW Version.')

option('fix-b2bst', type : 'boolean', value : true, description : 'Activate -mfix-b2bst switch to mitigate \"LEON3FT Stale Cache Entry After Store with Data Tag Parity Error\" errata, GRLIB-TN-0009')

option('with-tests', type : 'boolean', value : true, description : 'Enables native tests.')

option('lpp-destid', type : 'boolean', value : false, description : 'Set DPU dest ID to the one used at LPP.')
