option('SW_VERSION_N1', type : 'string', value : '3', description : 'N1 FSW Version.')
option('SW_VERSION_N2', type : 'string', value : '3', description : 'N2 FSW Version.')
option('SW_VERSION_N3', type : 'string', value : '0', description : 'N3 FSW Version.')
option('SW_VERSION_N4', type : 'string', value : '11', description : 'N4 FSW Version.')

option('fix-b2bst', type : 'boolean', value : true, description : 'Activate -mfix-b2bst switch to mitigate \"LEON3FT Stale Cache Entry After Store with Data Tag Parity Error\" errata, GRLIB-TN-0009')

option('with-tests', type : 'boolean', value : true, description : 'Enables native tests.')
option('with-pywrapper', type : 'boolean', value : true, description : 'Enables python wrapper.')
option('with-benchmarks', type : 'boolean', value : true, description : 'Enables LFR benchmarks.')
option('with-gcov', type : 'boolean', value : false, description : 'Enables gcov instrumentation of LFR FSW.')


option('lpp-destid', type : 'boolean', value : false, description : 'Set DPU dest ID to the one used at LPP.')

option('enable-printf', type : 'boolean', value : false, description : '')
option('enable-boot-messages', type : 'boolean', value : false, description : '')
option('enable-debug-messages', type : 'boolean', value : false, description : '')

option('enable-cpu-usage-report', type : 'boolean', value : false, description :  'Enable LFR cpu usage report')
option('enable-stack-report', type : 'boolean', value : false, description :  'Enable LFR stack report')

